--- a/Edit/edit.master
+++ b/Edit/edit.master
@@ -10,6 +10,8 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link href="../css/docs.min.css" rel="stylesheet" />
     <link href="../css/site.css" rel="stylesheet" />
+    <link href="../css/jquery.fancybox.css" rel="stylesheet" />
+    <script src="../js/jquery.fancybox.pack.js"></script>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
