--- a/Edit/edit.master
+++ b/Edit/edit.master
@@ -12,11 +12,11 @@
     <link href="../css/site.css" rel="stylesheet" />
     <link href="../css/jquery.fancybox.css" rel="stylesheet" />
     <script src="../js/jquery.fancybox.pack.js"></script>
-    <asp:ContentPlaceHolder id="head" runat="server">
+    <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-     <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
@@ -31,6 +31,9 @@
                 <ul class="nav navbar-nav">
                     <li class="active">
                         <a href="/edit/Area.aspx">Area</a>
+                    </li>
+                    <li>
+                        <a href="/edit/Identity.aspx">Identity</a>
                     </li>
                 </ul>
             </nav>
