--- a/Edit/edit.master
+++ b/Edit/edit.master
@@ -8,10 +8,9 @@
     <script src="../js/jquery-1.9.1.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../css/docs.min.css" rel="stylesheet" />
-    <link href="../css/site.css" rel="stylesheet" />
     <link href="../css/jquery.fancybox.css" rel="stylesheet" />
     <script src="../js/jquery.fancybox.pack.js"></script>
+    <link href="../css/edit.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
